Fixed footer, added hover transitions, fixed wrong word wrapping for links in achievements

--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,10 @@ html, body {
     overflow-x: hidden;
 }
 
+a, div, img {
+    transition: all .15s ease-in-out;
+}
+
 a:link { 
     text-decoration: none;
 }
